--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,9 @@
       </form>
     </div>
   </nav>
+  <div class="alert alert-primary" role="alert">
+    Hello visitor! I am looking for a full time job. Please feel free to contact if you like my profile. 
+  </div>
   <div class="container-fluid mt-0 px-0">
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
