--- a/templates/about.html
+++ b/templates/about.html
@@ -23,13 +23,13 @@
               <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/project">Project</a>
+              <a class="nav-link" href="project">Project</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/contact">Contact Me</a>
+                <a class="nav-link" href="contact">Contact Me</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="/about" >About</a>
+              <a class="nav-link" href="about" >About</a>
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
