--- a/templates/contact.html
+++ b/templates/contact.html
@@ -23,13 +23,13 @@
               <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/project">Project</a>
+              <a class="nav-link" href="project">Project</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="/contact">Contact Me</a>
+                <a class="nav-link" href="contact">Contact Me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about" >About</a>
+              <a class="nav-link" href="about" >About</a>
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
@@ -43,31 +43,19 @@
      <h2 class="text-centre">CONTACT ME</h2>
      <form>
       <div class="form-group">
-        <label for="exampleFormControlInput1">Email address</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        <label for="exampleFormControlInput1">Name</label>
+        <input type="text" class="form-control" id="name" placeholder="enter your name">
       </div>
       <div class="form-group">
-        <label for="exampleFormControlSelect1">Example select</label>
-        <select class="form-control" id="exampleFormControlSelect1">
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
-          <option>4</option>
-          <option>5</option>
-        </select>
+        <label for="exampleFormControlInput1">E-mail Id</label>
+        <input type="email" class="form-control" id="email address" placeholder="enter your email">
       </div>
       <div class="form-group">
-        <label for="exampleFormControlSelect2">Example multiple select</label>
-        <select multiple class="form-control" id="exampleFormControlSelect2">
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
-          <option>4</option>
-          <option>5</option>
-        </select>
+        <label for="exampleFormControlInput1">Company Name</label>
+        <input type="text" class="form-control" id="Company" placeholder="Enter your company's name">
       </div>
       <div class="form-group">
-        <label for="exampleFormControlTextarea1">Example textarea</label>
+        <label for="exampleFormControlTextarea1">Query you might be intrested to know</label>
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
       </div>
     </form>
